samples/task/valid/R38.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <steps><step><cmd/></step></steps>
    <result><p>Result</p></result>
    <example><p>Example</p></example>
    <postreq><p>These are the postrequisites.</p></postreq>
  </taskbody>
</task>