samples/task/invalid/R46.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <steps><step><cmd/></step></steps>
    <postreq><p>Postrequisites</p></postreq>
    <example><p>An example</p></example>
  </taskbody>
</task>